infra/gitops/apps/identity/identity-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-web
  namespace: identity
  labels:
    app: identity-web
    app.kubernetes.io/part-of: saas-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-web
  template:
    metadata:
      labels:
        app: identity-web
    spec:
      containers:
        - name: identity-web
          image: docker.io/cchiku1999/saas-identity-web:45d12584c7267698a6e666586c40a2bdfc8b39aa
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
